// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextField> > renders and matches multiline readonly snapshot 1`] = `
<div>
  <div
    class="_formField_aa17b3 _textField_63409b"
  >
    <label
      class="_label_aa17b3"
      for="text-field_1235_name"
    >
      Label
    </label>
    <div
      class="_container_9af53b"
    >
      <textarea
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_input_9af53b"
        id="text-field_1235_name"
        name="name"
        placeholder="Placeholder"
        readonly=""
        rows="3"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField> > renders and matches multiline snapshot 1`] = `
<div>
  <div
    class="_formField_aa17b3 _textField_63409b"
  >
    <label
      class="_label_aa17b3"
      for="text-field_1235_name"
    >
      Label
    </label>
    <div
      class="_container_9af53b"
    >
      <textarea
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_input_9af53b"
        id="text-field_1235_name"
        name="name"
        placeholder="Placeholder"
        rows="3"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField> > renders and matches readonly snapshot 1`] = `
<div>
  <div
    class="_formField_aa17b3 _textField_63409b"
  >
    <label
      class="_label_aa17b3"
      for="text-field_1235_name"
    >
      Label
    </label>
    <div
      class="_container_9af53b"
    >
      <input
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_input_9af53b"
        id="text-field_1235_name"
        name="name"
        placeholder="Placeholder"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TextField> > renders and matches snapshot 1`] = `
<div>
  <div
    class="_formField_aa17b3 _textField_63409b"
  >
    <label
      class="_label_aa17b3"
      for="text-field_1235_name"
    >
      Label
    </label>
    <div
      class="_container_9af53b"
    >
      <input
        aria-describedby="helper_text_1235_name"
        aria-invalid="false"
        aria-required="false"
        class="_input_9af53b"
        id="text-field_1235_name"
        name="name"
        placeholder="Placeholder"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
